Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame
  labels:
    app: boardgame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
      - name: boardgame-container
        image: 894486220781.dkr.ecr.us-east-1.amazonaws.com/boardgame:latest
        ports:
        - containerPort: 8080
