Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame
  namespace: aqt-ns
  labels:
    app: boardgame
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: boardgame
  type: LoadBalancer
